test/files/neg/warn-unused-privates.check
warn-unused-privates.scala:9: warning: private constructor is never used
  private def this(c: Int) = this(c, c)           // warn
              ^
warn-unused-privates.scala:10: warning: private method is never used
  private def bippy(x: Int): Int      = bippy(x)  // TODO: could warn
              ^
warn-unused-privates.scala:11: warning: private method is never used
  private def boop(x: Int)            = x+a+b     // warn
              ^
warn-unused-privates.scala:13: warning: private val is never used
  final private val MILLIS2: Int      = 1000      // warn
                    ^
warn-unused-privates.scala:20: warning: private val is never used
  private val HEY_INSTANCE: Int = 1000    // warn
              ^
warn-unused-privates.scala:42: warning: private val is never used
  private val hummer = "def" // warn
              ^
warn-unused-privates.scala:49: warning: private var is never used
  private var v1: Int = 0 // warn
              ^
warn-unused-privates.scala:50: warning: var v2 in trait Accessors is never set - it could be a val
  private var v2: Int = 0 // warn, never set
              ^
warn-unused-privates.scala:51: warning: private var is never used
  private var v3: Int = 0 // warn, never got
              ^
warn-unused-privates.scala:63: warning: default argument is never used
  private def bippy(x1: Int, x2: Int = 10, x3: Int = 15): Int = x1 + x2 + x3
                             ^
warn-unused-privates.scala:63: warning: default argument is never used
  private def bippy(x1: Int, x2: Int = 10, x3: Int = 15): Int = x1 + x2 + x3
                                           ^
warn-unused-privates.scala:74: warning: local var is never used
    var x = 1 // warn
        ^
warn-unused-privates.scala:81: warning: local val is never used
    val b = new Outer // warn
        ^
warn-unused-privates.scala:91: warning: private object is never used
  private object Dongo { def f = this } // warn
                 ^
warn-unused-privates.scala:92: warning: private class (with 1 decls) is never used
  private class Bar1 // warn
                ^
warn-unused-privates.scala:94: warning: private type is never used
  private type Alias1 = String // warn
               ^
warn-unused-privates.scala:101: warning: local object is never used
    object HiObject { def f = this } // warn
           ^
warn-unused-privates.scala:102: warning: local class (with 3 decls) is never used
    class Hi { // warn
          ^
warn-unused-privates.scala:106: warning: local class (with 1 decls) is never used
    class DingDongDoobie // warn
          ^
warn-unused-privates.scala:109: warning: local type is never used
    type OtherThing = String // warn
         ^
error: No warnings can be incurred under -Xfatal-warnings.
20 warnings found
one error found
